$Revision$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-08-20 [B] Updated default value of transparent_overlay in configuration.htm (thread ID 66660) {eenemeenemuu}
2010-08-20 [O] Updated Finnish language file (user contribution) {eenemeenemuu}
2010-08-19 [B] Added language fallback to function cpg_get_default_lang_var (thread ID 66513) {eenemeenemuu}
2010-08-16 [A] Added Icelandic language file (user contribution) {eenemeenemuu}
2010-08-16 [A] Added Italian language file (user contribution) {eenemeenemuu}
2010-08-16 [A] Added partial Swedish language file (user contribution) {GauGau}
2010-08-14 [B] Fixed search feature in the keyword manager (thread 66550) {Frantz}
2010-08-14 [B] Corrected French lang file to fix the non showing dropdown in the user manager (thread ID 66524) {Frantz}
2010-08-12 [B] Fixed admin email address validation (thread ID 66512) {eenemeenemuu}
2010-08-12 [B] Added charsetmgr.php to the delete files array (thread ID 66490) {eenemeenemuu}
2010-08-12 [B] Fixed lower case user name issue with plugin usergal_alphatabs (thread ID 66485) {eenemeenemuu}
2010-08-12 [B] Fixed issue with plugin usergal_alphatabs when bridged (thread ID 66340) {eenemeenemuu}
2010-08-10 [M] Counted version count up in SVN repository from cpg1.5.8 to cpg1.5.9 {eenemeenemuu}
2010-08-09 [B] Fixed default page when comments are sorted in descending order (thread ID 66441) {Nibbler}
2010-08-06 [M] Release of cpg1.5.8 {eenemeenemuu}
2010-07-28 [B] Fixed setting default language with language manager (thread ID 66276) {eenemeenemuu}
2010-07-28 [M] Changed form token generation - removed trouble maker parameters (thread ID 65918) {eenemeenemuu}